# track_ros2

./: .gitignore  README.MD  track.py
src/detect/: CMakeLists.txt  package.xml
src/detect/include/detect/: detect_node.hpp  detector.hpp  reid.hpp
src/detect/include/rm_hero/: rm_hero_node.hpp
src/detect/launch/: detect.launch.py  detect_launch.py
src/detect/src/: detect_node.cpp  detector.cpp  reid.cpp
src/juwei_launch/: package.xml  setup.py
src/juwei_launch/launch/: track_system.launch.py
src/juwei_launch/resource/: juwei_launch
src/launch/rm_vision_bringup/: CMakeLists.txt
src/launch/rm_vision_bringup/config/: camera_info.yaml
src/launch/rm_vision_bringup/launch/: addMVlaunch.py
src/oak_d_camera/: CMakeLists.txt  README.md
src/oak_d_camera/launch/: camera.launch.py  orgin_camera.launch.py
src/oak_d_camera/src/: camera_publisher.cpp
src/track/: CMakeLists.txt  package.xml
src/track/include/detect/: track_node.hpp
src/track/include/track/: ekf.hpp  track_node.hpp
src/track/launch/: track.launch.py
src/track/src/: ekf.cpp  track.cpp  track_node.cpp
src/track_launch/: package.xml  setup.py
src/track_launch/launch/: track_system.launch.py
src/track_launch/resource/: track_launch
src/track_launch/strat_launch/config/: launch_params.yaml  node_params.yaml
src/track_launch/strat_launch/launch/: vision_bringup.launch.py
